<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jalberssonplazas.navegacion.Main3Activity">

    <Button
        android:id="@+id/btnVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verde"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginLeftTxt"
        />
    <Button
        android:id="@+id/btnAmarillo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amarillo"
        android:layout_below="@id/btnVerde"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginLeftTxt"
        />
    <Button
        android:id="@+id/btnRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rojo"
        android:layout_below="@id/btnAmarillo"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginLeftTxt"
        />
    <TextView
        android:id="@+id/txtVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:layout_toRightOf="@id/btnVerde"
        android:layout_marginTop="@dimen/marginLeftTxt"
        android:layout_marginLeft="@dimen/marginLeftTxt"
        />
    <TextView
        android:id="@+id/txtAmarillo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:layout_below="@id/btnVerde"
        android:layout_toRightOf="@id/btnAmarillo"
        android:layout_marginTop="@dimen/marginLeftTxt"
        android:layout_marginLeft="@dimen/marginLeftTxt"
        />
    <TextView
        android:id="@+id/txtRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:layout_toRightOf="@id/btnRojo"
        android:layout_below="@id/btnAmarillo"
        android:layout_marginTop="@dimen/marginLeftTxt"
        android:layout_marginLeft="@dimen/marginLeftTxt"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactenos"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/btnRojo"
        />
</RelativeLayout>
